# dq_vizlab

./: .gitignore  .gitmodules  LICENSE  README.md  build.sh  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: deploy.yml
public/robots/: robot_config_template.yaml
public/robots/franka/: panda_simplified.urdf  robot_config.yaml
public/robots/ia_robot/: robot_config.yaml
public/robots/ia_robot/left_arm/: left_arm.urdf
public/robots/ia_robot/meshes/: link1.STL  llink1.STL  llink6.STL  ree_link.STL  rlink2.STL  rlink6.STL
public/robots/ia_robot/right_arm/: right_arm.urdf
public/robots/ia_robot_hmc/: right_left_arm.urdf  robot_config.yaml
public/robots/ia_robot_hmc/meshes/: arm_right.STL  link2.STL  llink2.STL  llink3.STL  llink5.STL  llink7.STL  rlink1.STL  rlink5.STL  rlink7.STL
public/robots/ia_robot_unlimted/left_arm/: left_arm.urdf
public/robots/ia_robot_unlimted/meshes/: llink4.STL  low_leg.STL  rlink3.STL  rlink4.STL  up_leg.STL
public/robots/ia_robot_unlimted/right_arm/: right_arm.urdf
public/robots/ur3/: robot_config.yaml  ur3.urdf
public/robots/ur3/meshes/visual/: shoulder.dae
public/robots/ur3_and_ur3e/: robot_config.yaml
public/robots/ur3_and_ur3e/ur3/meshes/visual/: forearm.dae
public/robots/ur3_and_ur3e/ur3e/meshes/visual/: base.dae
public/robots/ur3e/: robot_config.yaml  ur3e.urdf
public/wasm/: .gitkeep  dqrobotics.js
src/: dqrobotics.js  main.js  styles.css  urdf-loader.js  urdf-to-mdh.js  visualizer.js
test_robot_simple/: robot.urdf  robot_config.yaml
wasm/: CMakeLists.txt  bindings.cpp
